# ZyngaHackathon

./: LICENSE  README.md  app.py  models.py  pyproject.toml  routes.py  verification_service.py
aadhar_verification/backend/: app.py  config.py  requirements.txt
aadhar_verification/backend/models/: session.py
aadhar_verification/backend/services/: age_service.py  face_service.py  ocr_service.py
aadhar_verification/backend/utils/: image_utils.py  vadilators.py
aadhar_verification/frontend/: vite.config.js
aadhar_verification/frontend/src/: App.jsx  index.css
aadhar_verification/frontend/src/components/: AadhaarUpload.jsx  AgeGroupDisplay.jsx  SelfieCapture.jsx  VerificationResult.jsx
